welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:0: error: not enough arguments for method growFlowers: (c: Int)Unit.
Unspecified value parameter c.
		growFlowers();
                           ^